tests/positive/Reachability/Data/Product.juvix
module Data.Product;

syntax infixr 2 ×;
type × (a : Type) (b : Type) :=
  | , : a → b → a × b;
