tests/negative/Internal/WrongReturnTypeTooManyArguments.juvix
module WrongReturnTypeTooManyArguments;

type A (B : Type) :=
  | c : A B B;

